# CalicutOne

./: .gitignore  README.md  config.py  geoapify_service.py  geocodeexample.txt  openrouteapiexample.txt  prompt.txt  pyproject.toml  travel_planner_agent.py  users.db
Backend/: README.md  database.py  debug_env.py  geoapify_service.py  interactive.py  main.py  ors_service.py  requirements.txt  test_ors_key.py  tests.py  travel_planner_agent.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.jsx  App.tsx  config.js  index.css  types.ts
frontend/src/components/: AICameraLocations.tsx  AuthModal.jsx  CameraFeedModal.tsx  CameraMap.tsx  Navbar.jsx  Navbar.tsx  ViolenceDetection.tsx
frontend/src/data/: cameras.ts  kozhikodeGeoJSON.ts
frontend/src/pages/: Home.jsx
tests/: full_system_test.py
violence-detection/: .gitignore  run_video.py  server.py
